[project]
name = "pubsub-py"
version = "0.2.1"
description = "A small, strongly-typed async network pub/sub library and broker."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "msgpack>=1.2.1",
]

[project.optional-dependencies]
# OpenTelemetry adapter (pubsub.observability.otel). API only — the app wires
# the SDK/exporter. Core runtime stays stdlib + msgpack.
otel = ["opentelemetry-api>=1.27.0"]

[project.scripts]
pubsub-server = "pubsub.transport.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pubsub"]
